@@ -1,3 +1,6 @@
+2006-11-12  Matthew Grooms <mgrooms@shrew.net>
+	* src/racoon/sainfo.c: fix anonymous sainfo selection.
+
 2006-10-22  Yvan Vanhullebus  <vanhu@netasq.com>
 	From Michal Ruzicka <michal.ruzicka@comstar.cz>:
 	* src/racoon/{backupsa.c|cfparse.y}: fixed typos.
